Fix heights for image covers without an image

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -116,3 +116,8 @@ body {
 .entry-share a {
     color: #2c818c;
 }
+
+.report-cover {
+  // todo; fix for smaler devices
+  min-height: 300px;
+}
